--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
 
   <h1>Website Pasangan Makanan</h1>
+  <img src="images/ayam.jpg" alt="Ayam Goreng" class="gambar">
+<img src="images/mie.jpg" alt="Mie Goreng" class="gambar">
+<img src="images/burger.jpg" alt="Burger" class="gambar">
   <p>Pilih makanan utama:</p>
 
   <select id="makanan" onchange="tampilkanPasangan()">
