--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
 
   <h1>Website Pasangan Makanan</h1>
-  <img src="images/ayam.jpg" alt="Ayam Goreng" class="gambar">
-<img src="images/mie.jpg" alt="Mie Goreng" class="gambar">
-<img src="images/burger.jpg" alt="Burger" class="gambar">
+  <img src="images/Ayamgoreng.png" alt="Ayam Goreng" class="gambar">
+<img src="images/miegoreng.png" alt="Mie Goreng" class="gambar">
+<img src="images/IMG-20260112-WA0046.jpg" alt="Burger" class="gambar">
   <p>Pilih makanan utama:</p>
 
   <select id="makanan" onchange="tampilkanPasangan()">
